# capable-bench

./: .gitignore  README.md  package-lock.json  pyproject.toml
capablebench/: audit.py  baseline.py  cli.py  curate.py  dashboard_data.py  esm_modal_app.py  grade.py  ingest.py  invivo.py  io.py  modal_app.py  modal_runner.py  run.py  suite.py  task_sets.py  tasks.py  validate.py  viewer.py
configs/: benchmark.yaml
dashboard/: DEPLOY.md  README.md  next.config.ts  package-lock.json  package.json  start.sh  wrangler.jsonc
dashboard/scripts/: bake-static.ts
data/answers/: README.md  cb-mch-disulfide-vs-aromatic-001.yaml  cb-nps-combo-modifications-001.yaml  cb-nps-polymorphism-001.yaml  cb-orexin-selectivity-001.yaml
data/raw/: README.md
data/task-sets/: pairwise.yaml
data/tasks/: README.md
data/validators/: cb-nps-polymorphism-001.py  cb-orexin-selectivity-001.py  cb-polypharm-lead-001.py  cb-program-lead-001.py  pilot-peptide-ranking-sequence-nps-large-001.py  pilot-peptide-ranking-sequence-nps-medium-001.py  (+7 more)
docs/: BENCHMARK_DESIGN.md  BIO_DISCOVERY_BENCHMARK.md  CALIBRATION.md  CAPABLE_BENCH.md  DATA_INGESTION.md  MODAL_RUNNER.md  TASK_SCHEMA.md  openai-memo.md
logs/: all_tasks_2x.txt  claude-todo.txt  missing-tasks-claude.txt  missing-tasks-sanitized.txt
scripts/: apply_effect_size_tags.py  audit_signal_quality.py  build_sanitized_pairwise.py  classify_pairwise_failures.py  ingest_gold_reasoning.py  plot_failure_breakdown_by_bucket.py  run_esm_oracle_probe.py  run_missing.py  strip_literature_annotations.py  sweep_chimera_bugs.py
(+110 files in other folders)
